--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -49,6 +49,7 @@
                 <p class="lead">出版社: {{ data.book_publisher }}</p>
                 <p class="lead">ISBN: {{ data.book_id }}</p>
                 <p class="lead">庫存: {{ data.book_count }}</p>
+                <p class="lead">提供者: {{ data.provider_account }}</p>
                 <p class="lead">上架時間: {{ data.create_datetime }}</p>
                 <p class="lead">更新時間: {{ data.update_datetime }}</p>
                 {% if data.item_status == '1' %}
