--- a/templates/product/header.html
+++ b/templates/product/header.html
@@ -1,121 +1,116 @@
-<!-- Header-->
-<nav class="py-2 bg-body-tertiary border-bottom">
-    <div class="container d-flex flex-wrap">
-        <ul class="nav me-auto">
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2 active"
-                                    aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link link-body-emphasis px-2">About</a></li>
-        </ul>
+<!-- Header -->
+<style>
+    .custom-title {
+        font-size: 28px;
+        font-weight: bold;
+    }
+</style>
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <div class="container">
+        <a class="navbar-brand custom-title" href="{{ url_for('productController.getProducts') }}">Bookmazon</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <form method="POST" action="{{ url_for('productController.search_books') }}" id="searchForm"
+                          class="d-flex">
+                        <input type="text" id="searchInput" name="keyword" class="form-control me-2"
+                               placeholder="輸入搜尋內容…">
 
-        <form class="d-flex">
-            {% if current_user.is_authenticated %}
+                        <!-- 這裡使用 Bootstrap 的 dropdown -->
+                        <div class="dropdown">
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="customDropdown"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                進階搜尋
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="customDropdown">
+                                <!-- 第一個下拉選單 -->
+                                <li>
+                                    <label for="searchField" class="dropdown-item-text">搜尋欄位</label>
+                                    <select id="searchField" name="searchField" class="form-select"
+                                            style="width: 250px;">
+                                        <!-- 調整這裡的寬度值 -->
+                                        <option value="title">全文</option>
+                                        <option value="bookName">書名</option>
+                                        <option value="author">作者</option>
+                                        <option value="publisher">出版商</option>
+                                        <option value="provider">提供者</option>
+                                        <option value="isbn">ISBN</option>
+                                    </select>
+                                </li>
+
+                                <!-- 第二個下拉選單 -->
+                                <li>
+                                    <label for="bookCategory" class="dropdown-item-text">分類</label>
+                                    <select id="bookCategory" name="bookCategory" class="form-select"
+                                            style="width: 250px;">
+                                        <!-- 調整這裡的寬度值 -->
+                                        <option value="all">All</option>
+                                        <option value="fiction">Fiction</option>
+                                        <option value="nonfiction">Non-Fiction</option>
+                                        <option value="mystery">Mystery</option>
+                                        <option value="science">Science</option>
+                                    </select>
+                                </li>
+
+                                <!-- 第三個下拉選單 -->
+                                <li>
+                                    <label class="dropdown-item-text">售價</label>
+                                    <div class="input-group">
+                                        <input type="number" name="minPrice" min="0" placeholder="金額"
+                                               class="form-control"
+                                               style="width: 100px;">
+                                        <span class="input-group-text">至</span>
+                                        <input type="number" name="maxPrice" min="0" placeholder="金額"
+                                               class="form-control"
+                                               style="width: 100px;">
+                                        <span class="input-group-text">元</span>
+                                    </div>
+                                </li>
+
+                                <!-- 其他下拉選單項目 -->
+                            </ul>
+                        </div>
+
+                        <!-- 其他搜尋條件 -->
+                        <button class="btn btn-outline-success ms-2" type="submit" style="white-space: nowrap;">搜尋</button>
+                    </form>
+                </li>
+            </ul>
+
+            <form class="d-flex">
+                {% if current_user.is_authenticated %}
                 <!-- 如果使用者已登入，則導向到購物車頁面 -->
-                <a href="{{ url_for('cartController.view_cart') }}" class="btn btn-outline-dark ms-2">
-                    <i class="bi-cart-fill me-1"></i>
-                        Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill" id="cartItemCount">{{ cart_item_count }}</span> <!-- 您可以修改這裡的數字以反映實際的購物車物品數量 -->
+                <a href="{{ url_for('cartController.view_cart') }}" class="btn btn-outline-dark me-2">
+                    <i class="bi bi-cart-fill me-1"></i> 購物車
+                    <span class="badge bg-dark text-white rounded-pill" id="cartItemCount">{{ cart_item_count }}</span>
                 </a>
                 <!-- 如果使用者已登入，則導向到查看所有訂單 -->
-                <a href="{{ url_for('orderController.view_order') }}" class="btn btn-outline-dark ms-2">
-                    <i class="bi bi-receipt me-1"></i>
-                        查看訂單
+                <a href="{{ url_for('orderController.view_order') }}" class="btn btn-outline-dark me-2">
+                    <i class="bi bi-receipt me-1"></i> 個人訂單
                 </a>
-            {% else %}
-                <!-- 不顯示按紐 -->
-            {% endif %}
-        </form>
+                {% else %}
+                <!-- 不顯示按鈕 -->
+                {% endif %}
+            </form>
 
-        <ul class="nav">
-           {% if not current_user.is_authenticated %}
+            <ul class="navbar-nav">
+                {% if not current_user.is_authenticated %}
                 <!-- 如果用使用者登入顯示此内容 -->
-            <li class="nav-item"><a href="{{ url_for('userController.login') }}" class="btn btn-outline-dark ms-2">Login</a></li>
-            <li class="nav-item"><a href="{{ url_for('userController.register') }}" class="nav-link link-body-emphasis px-2">Sign up</a></li>
-            {% else %}
-            <li class="nav-item"><a href="{{ url_for('userController.user_profile') }}" class="btn btn-outline-dark ms-2">Welcome, {{ current_user.user.user_account }}!</a></li>
-            <li class="nav-item"><a href="{{ url_for('userController.logout') }}" class="btn btn-outline-dark ms-2">Logout</a></li>
-            {% endif %}
-        </ul>
+                <li class="nav-item"><a href="{{ url_for('userController.login') }}" class="btn btn-outline-dark me-2">登入</a>
+                </li>
+                <li class="nav-item"><a href="{{ url_for('userController.register') }}" class="nav-link">註冊</a>
+                </li>
+                {% else %}
+                <li class="nav-item"><a href="{{ url_for('userController.user_profile') }}"
+                                        class="btn btn-outline-dark me-2">我的個人資訊</a></li>
+                <li class="nav-item"><a href="{{ url_for('userController.logout') }}" class="btn btn-outline-dark me-2">登出</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
 </nav>
-
-<header class="py-3 mb-4 border-bottom">
-    <div class="container d-flex flex-wrap justify-content-center">
-        <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
-            <svg class="bi me-2" width="40" height="32">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-            <span class="fs-4">Bookmazon</span>
-        </a>
-
-        <form method="POST" action="{{ url_for('productController.search_books') }}" id="searchForm">
-            <div class="ts-input">
-                <input type="text" id="searchInput" name="keyword" placeholder="輸入搜尋內容…">
-            </div>
-
-            <div class="ts-select" id="customDropdown" data-dropdown="select">
-                <div class="content">
-                    <span></span>進階搜尋
-                </div>
-            </div>
-
-            <div class="ts-dropdown" id="dropdownContent">
-                <!-- 第一個下拉選單 -->
-                <div class="dropdown-item">
-                    <label for="searchField">搜尋欄位</label>
-                    <select id="searchField" name="searchField">
-                        <option value="title">全文</option>
-                        <option value="bookName">書名</option>
-                        <option value="author">作者</option>
-                        <option value="publisher">出版商</option>
-                        <option value="provider">提供者</option>
-                        <option value="isbn">ISBN</option>
-                    </select>
-                </div>
-
-                <!-- 第二個下拉選單 -->
-                <div class="dropdown-item">
-                    <label for="bookCategory">分類</label>
-                    <select id="bookCategory" name="bookCategory">
-                        <option value="all">All</option>
-                        <option value="fiction">Fiction</option>
-                        <option value="nonfiction">Non-Fiction</option>
-                        <option value="mystery">Mystery</option>
-                        <option value="science">Science</option>
-                    </select>
-                </div>
-
-                <!-- 第三個下拉選單 -->
-                <div class="dropdown-item">
-                    <label for="priceRange">售價</label>
-                    <span id="priceRange">
-                        <input type="number" name="minPrice" min="0" placeholder="金額"  style="width: 100px;">
-                        <span>至</span>
-                        <input type="number" name="maxPrice" min="0" placeholder="金額"  style="width: 100px;">
-                        <span>元</span>
-                    </span>
-                </div>
-
-<!--                &lt;!&ndash; 第四個下拉選單 &ndash;&gt;-->
-<!--                <div class="dropdown-item">-->
-<!--                    <label for="publishDate">出版日期</label>-->
-<!--                    <select id="publishDate" name="publishDate">-->
-<!--                        <option value="all">All</option>-->
-<!--                        <option value="lastYear">Last Year</option>-->
-<!--                        <option value="last5Years">Last 5 Years</option>-->
-<!--                        <option value="lastDecade">Last Decade</option>-->
-<!--                    </select>-->
-<!--                </div>-->
-
-                <div class="dropdown-row">
-                    <button id="cancelButton" onclick="closeDropdown()">取消</button>
-                </div>
-            </div>
-
-            <button class="btn btn-outline-success ms-2" type="submit">Search</button>
-        </form>
-    </div>
-</header>
-<!-- Header-->
